--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       <p id="section-new-task">
         <label for="new-task">Add Item</label>
         <div class="new-task-wrapper">
-          <input id="new-task"class="task" type="text">
+          <input id="new-task"class="task-input" type="text">
           <button>Add</button>
         </div>
       </p>
@@ -22,19 +22,19 @@
       <ul id="incomplete-tasks-list">
         <li>
           <input type="checkbox">
-          <label class="task">Pay Bills</label>
-          <input type="text" class="task">
-          <button class="edit">Edit</button>
-          <button class="delete">
+          <label class="task-label">Pay Bills</label>
+          <input type="text" class="task-input">
+          <button class="edit-button">Edit</button>
+          <button class="delete-button">
             <img src="./remove.svg">
           </button>
         </li>
         <li class="edit-mode">
           <input type="checkbox">
-          <label class="task">Go Shopping</label>
-          <input type="text" value="Go Shopping" class="task">
-          <button class="edit">Save</button>
-          <button class="delete">
+          <label class="task-label">Go Shopping</label>
+          <input type="text" value="Go Shopping" class="task-input">
+          <button class="edit-button">Save</button>
+          <button class="delete-button">
             <img src="./remove.svg">
           </button>
         </li>
@@ -43,10 +43,10 @@
       <ul id="completed-tasks-list">
         <li>
           <input type="checkbox" checked>
-          <label class="task">See the Doctor</label>
-          <input type="text" class="task">
-          <button class="edit">Edit</button>
-          <button class="delete">
+          <label class="task-label">See the Doctor</label>
+          <input type="text" class="task-input">
+          <button class="edit-button">Edit</button>
+          <button class="delete-button">
             <img src="./remove.svg">
           </button>
         </li>
