--- a/index.html
+++ b/index.html
@@ -5,49 +5,49 @@
     <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700" rel="stylesheet">
     <link rel="stylesheet" href="style.css" media="screen" charset="utf-8">
   </head>
-  <body>
+  <body class="body">
     <div class="header">
-      <img src="./eisenhower-matrix.jpg">
+      <img class="header-img" src="./eisenhower-matrix.jpg">
       <a class="header-info" href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a>
     </div>
     <div class="main">
       <p id="section-new-task">
-        <label for="new-task">Add Item</label>
+        <label for="new-task-label">Add Item</label>
         <div class="new-task-wrapper">
-          <input id="new-task"class="task-input" type="text">
-          <button>Add</button>
+          <input id="new-task"class="task-input new-task-input" type="text">
+          <button class="button add-button">Add</button>
         </div>
       </p>
-      <h3>Todo</h3>
-      <ul id="incomplete-tasks-list">
-        <li>
-          <input type="checkbox">
+      <h3 class="task-list-title">Todo</h3>
+      <ul class="task-list" id="incomplete-tasks-list">
+        <li class="task-list-item">
+          <input class="task-checkbox" type="checkbox">
           <label class="task-label">Pay Bills</label>
           <input type="text" class="task-input">
-          <button class="edit-button">Edit</button>
-          <button class="delete-button">
-            <img src="./remove.svg">
+          <button class="button edit-button">Edit</button>
+          <button class="button delete-button">
+            <img class="delete-button-img" src="./remove.svg">
           </button>
         </li>
-        <li class="edit-mode">
-          <input type="checkbox">
+        <li class="task-list-item edit-mode">
+          <input class="task-checkbox" type="checkbox">
           <label class="task-label">Go Shopping</label>
           <input type="text" value="Go Shopping" class="task-input">
-          <button class="edit-button">Save</button>
-          <button class="delete-button">
-            <img src="./remove.svg">
+          <button class="button edit-button">Save</button>
+          <button class="button delete-button">
+            <img class="delete-button-img" src="./remove.svg">
           </button>
         </li>
       </ul>
-      <h3>Completed</h3>
-      <ul id="completed-tasks-list">
-        <li>
-          <input type="checkbox" checked>
+      <h3 class="task-list-title">Completed</h3>
+      <ul class="task-list" id="completed-tasks-list">
+        <li class="task-list-item">
+          <input class="task-checkbox" type="checkbox" checked>
           <label class="task-label">See the Doctor</label>
           <input type="text" class="task-input">
-          <button class="edit-button">Edit</button>
-          <button class="delete-button">
-            <img src="./remove.svg">
+          <button class="button edit-button">Edit</button>
+          <button class="button delete-button">
+            <img class="delete-button-img" src="./remove.svg">
           </button>
         </li>
       </ul>
