--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   </head>
   <body class="body">
     <header class="header">
-      <img class="header-img" src="./eisenhower-matrix.jpg">
+      <img class="header-img" src="./eisenhower-matrix.jpg" alt="The eisenhower matrix">
       <a class="header-info" href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a>
     </header>
     <main class="main">
@@ -27,7 +27,7 @@
             <input type="text" class="task-input">
             <button class="button edit-button">Edit</button>
             <button class="button delete-button">
-              <img class="delete-button-img" src="./remove.svg">
+              <img class="delete-button-img" src="./remove.svg" alt="">
             </button>
           </li>
           <li class="task-list-item edit-mode">
@@ -36,7 +36,7 @@
             <input type="text" value="Go Shopping" class="task-input">
             <button class="button edit-button">Save</button>
             <button class="button delete-button">
-              <img class="delete-button-img" src="./remove.svg">
+              <img class="delete-button-img" src="./remove.svg" alt="">
             </button>
           </li>
         </ul>
@@ -50,7 +50,7 @@
             <input type="text" class="task-input">
             <button class="button edit-button">Edit</button>
             <button class="button delete-button">
-              <img class="delete-button-img" src="./remove.svg">
+              <img class="delete-button-img" src="./remove.svg" alt="">
             </button>
           </li>
         </ul>
