--- a/index.html
+++ b/index.html
@@ -7,50 +7,50 @@
   </head>
   <body class="body">
     <header class="header">
-      <img class="header-img" src="./eisenhower-matrix.jpg" alt="The eisenhower matrix">
-      <a class="header-info" href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a>
+      <img class="header__img" src="./eisenhower-matrix.jpg" alt="The eisenhower matrix">
+      <a class="header__info" href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a>
     </header>
     <main class="main">
-      <section class="section-new-task">
-        <h3 class="section-title">Add Item</h3>
-        <div class="new-task-wrapper">
-          <input id="new-task" class="task-input new-task-input" type="text">
-          <button class="button add-button">Add</button>
+      <section class="section">
+        <h3 class="section__title">Add Item</h3>
+        <div class="task-item task-item_new">
+          <input class="task-item__input task-item_new__input" type="text">
+          <button class="button button-add">Add</button>
         </div>
       </section>
-      <section class="section-incomplete-tasks">
-        <h3 class="section-title">Todo</h3>
-        <ul class="task-list" id="incomplete-tasks-list">
-          <li class="task-list-item">
-            <input class="task-checkbox" type="checkbox">
-            <label class="task-label">Pay Bills</label>
-            <input type="text" class="task-input">
-            <button class="button edit-button">Edit</button>
-            <button class="button delete-button">
-              <img class="delete-button-img" src="./remove.svg" alt="">
+      <section class="section">
+        <h3 class="section__title">Todo</h3>
+        <ul class="task-list task-list_incomplete">
+          <li class="task-item">
+            <input class="task-item__checkbox" type="checkbox">
+            <label class="task-item__label">Pay Bills</label>
+            <input class="task-item__input" type="text">
+            <button class="button button-edit">Edit</button>
+            <button class="button button-delete">
+              <img class="button-delete__img" src="./remove.svg" alt="">
             </button>
           </li>
-          <li class="task-list-item edit-mode">
-            <input class="task-checkbox" type="checkbox">
-            <label class="task-label">Go Shopping</label>
-            <input type="text" value="Go Shopping" class="task-input">
-            <button class="button edit-button">Save</button>
-            <button class="button delete-button">
-              <img class="delete-button-img" src="./remove.svg" alt="">
+          <li class="task-item task-item_editable">
+            <input class="task-item__checkbox" type="checkbox">
+            <label class="task-item__label">Go Shopping</label>
+            <input class="task-item__input" value="Go Shopping" type="text">
+            <button class="button button-edit">Save</button>
+            <button class="button button-delete">
+              <img class="button-delete__img" src="./remove.svg" alt="">
             </button>
           </li>
         </ul>
       </section>
-      <section class="section-completed-tasks">
-        <h3 class="section-title">Completed</h3>
-        <ul class="task-list" id="completed-tasks-list">
-          <li class="task-list-item">
-            <input class="task-checkbox" type="checkbox" checked>
-            <label class="task-label">See the Doctor</label>
-            <input type="text" class="task-input">
-            <button class="button edit-button">Edit</button>
-            <button class="button delete-button">
-              <img class="delete-button-img" src="./remove.svg" alt="">
+      <section class="section">
+        <h3 class="section__title">Completed</h3>
+        <ul class="task-list task-list_completed">
+          <li class="task-item">
+            <input class="task-item__checkbox" type="checkbox" checked>
+            <label class="task-item__label">See the Doctor</label>
+            <input class="task-item__input" type="text">
+            <button class="button button-edit">Edit</button>
+            <button class="button button-delete">
+              <img class="button-delete__img" src="./remove.svg" alt="">
             </button>
           </li>
         </ul>
